src/objects/Study_Option__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <label>Study</label>
        <referenceTo>Study__c</referenceTo>
        <relationshipLabel>Study Options</relationshipLabel>
        <relationshipName>Study_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Study Option</label>
    <nameField>
        <label>Study Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>